2008-10-16  1.11  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph/graph.c (dup): Fixed duplication of an empty graph, mis-
	* graph/tests/command.test: handled the re-chaining of the node-
	  list in the source. Added test for this case.

2008-10-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph/graph.c (dup): Fixed missing propagation of arc weights.
	* graph/tests/command.test: Added test for graph assignment with
	  weights.

2008-10-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph.man: Extended graphs with the ability to define arc
	* graph.tcl: weights. Added methods to query and manipulate weight
	* graph_tcl.tcl: information. Extended the serialization format to
	* pkgIndex.tcl: handle graphs with and without arc weights.
	* graph/arc.c: Implemented in both Tcl and C. The Tcl code is
	* graph/ds.h: derived from Alejandro Paz's ( <vidriloco@gmail.com>)
	* graph/methods.c: work during GSoC 2008. Extended testsuite and
	* graph/methods.h: documentation. The package now requires Tcl 8.4
	* graph/objcmd.c: for operation. Bumped the package version to 2.3.
	* graph/tests/Xcontrol:
	* graph/tests/arc/getunweighted.test: 
	* graph/tests/arc/getweight.test: 
	* graph/tests/arc/hasweight.test:
	* graph/tests/arc/setunweighted.test:
	* graph/tests/arc/setweight.test:
	* graph/tests/arc/unsetweight.test:
	* graph/tests/arc/weights.test:
	* graph/tests/command.test:
	* graph/tests/deserialize.test:
	* graph/tests/serialize.test:
	* graph/tests/Xsupport:

2008-09-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* disjointset.man: Added a modified form of the disjoint-set class
	* disjointset.tcl: created by  Alejandro Paz <vidriloco@gmail.com>
	* disjointset.test: for the Google Summer Of Code 2008. Version 1.0.
	* disjointset.testsuite: 
	* pkgIndex.tcl:
