@@ -1,0 +1,14 @@
+# -*- tcl -*-
+# graphops.testsuite.setup:  Setting up implementation specific definitions.
+#
+# Copyright (c) 2008 Andreas Kupries <andreas_kupries@users.sourceforge.net>
+# All rights reserved.
+#
+# RCS: @(#) $Id: XOpsSetup,v 1.1 2008/11/05 07:28:53 andreas_kupries Exp $
+
+# -------------------------------------------------------------------------
+
+# Place holder for future setup / helper actions.
+
+# -------------------------------------------------------------------------
+# -------------------------------------------------------------------------
