@@ -1,0 +1,18 @@
+# -*- tcl -*-
+# graphops.testsupport:  Helper commands for the graph ops testsuite.
+#
+# Copyright (c) 2008 Andreas Kupries <andreas_kupries@users.sourceforge.net>
+#
+# All rights reserved.
+#
+# RCS: @(#) $Id: XOpsSupport,v 1.1 2008/11/05 07:28:53 andreas_kupries Exp $
+
+# -------------------------------------------------------------------------
+
+# Code to generate various graphs to operate on.
+
+#----------------------------------------------------------------------
+#----------------------------------------------------------------------
+#----------------------------------------------------------------------
+#----------------------------------------------------------------------
+#----------------------------------------------------------------------
