@@ -1,0 +1,47 @@
+# -*- tcl -*-
+# graphops.test:  tests for the operations on graph structures.
+#
+# Copyright (c) 2008 Andreas Kupries <andreas_kupries@users.sourceforge.net>
+# All rights reserved.
+#
+# RCS: @(#) $Id: graphops.test,v 1.1 2008/11/05 07:28:52 andreas_kupries Exp $
+
+# -------------------------------------------------------------------------
+
+source [file join \
+	[file dirname [file dirname [file join [pwd] [info script]]]] \
+	devtools testutilities.tcl]
+
+testsNeedTcl     8.2
+testsNeedTcltest 1.0
+
+support {
+    useLocal list.tcl struct::list
+
+    useAccel [useTcllibC] struct/sets.tcl struct::set
+    TestAccelInit                         struct::set
+
+    useAccel [useTcllibC] struct/graph.tcl struct::graph
+    TestAccelInit                          struct::graph
+
+    useLocalFile graph/tests/XOpsSupport
+}
+testing {
+    useLocal graphops.tcl struct::graph::op
+}
+
+# -------------------------------------------------------------------------
+
+# The global variable 'impl' is part of the public API the testsuite
+# (in graphops.testsuite) is expecting from the environment.
+
+TestAccelDo struct::set setimpl {
+    TestAccelDo struct::graph impl {
+	source [localPath graph/tests/XOpsControl]
+    }
+}
+
+#----------------------------------------------------------------------
+TestAccelExit struct::graph
+TestAccelExit struct::set
+testsuiteCleanup
